src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Copy_3_Assigned_Date__c</fullName>
        <description>Copy 3 of Assigned Date needed for reporting</description>
        <formula>Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Budget_Approved_Date__c</fullName>
        <description>Copy 3 of Budget Approved Date Needed for Reporting</description>
        <formula>Budget_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Budget Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Closed_Date__c</fullName>
        <description>Copy 3 of Closed Date Needed for Reporting</description>
        <formula>Closed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Completed_Date__c</fullName>
        <description>Copy 3 of Completed Date needed for reporting</description>
        <formula>Completed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Concept_Approval_Date__c</fullName>
        <description>Copy 3 of Concept Approval Date Needed for Reporting</description>
        <formula>Concept_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Concept Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Diagnosis_Ver_Rec_Dat__c</fullName>
        <description>Copy 3 of Diagnosis Verification Received Date Needed for Reporting</description>
        <formula>Diagnosis_Verification_Receive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Diagnosis Ver. Rec Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_End_Date__c</fullName>
        <description>Copy 3 of End Date Needed for Reporting</description>
        <formula>End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Hold_Date__c</fullName>
        <description>Copy 3 of Hold Date Needed for Reporting</description>
        <formula>Hold_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Inactive_Date__c</fullName>
        <description>Copy 3 of Inactive Date Needed for Reporting</description>
        <formula>Inactive_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Interview_Date__c</fullName>
        <description>Copy 3 of Interview Date Needed for Reporting</description>
        <formula>Interview_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Qualified_Date__c</fullName>
        <description>Copy 3 of Qualified Date needed for reporting</description>
        <formula>Qualified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Ready_to_Assign_Date__c</fullName>
        <description>Copy 3 of Ready to Assign needed for reporting</description>
        <formula>Ready_to_Assign_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Ready to Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Referral_Date__c</fullName>
        <description>Copy of Referral Date needed for reporting</description>
        <formula>Referral_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Start_Date__c</fullName>
        <description>Copy 3 of Start Date Needed for Reporting</description>
        <formula>Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_3_Wish_Determined_Date__c</fullName>
        <description>Copy 3 of Wish Determined Date needed for reporting</description>
        <formula>Wish_Determined_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 3 - Wish Determined Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentDOB__c</fullName>
        <formula>IF (
    MONTH (Birthdate__c)=2 &amp;&amp; DAY (Birthdate__c)=29, 
    IF (
        (DATE (YEAR(TODAY()),1,1) + 59) &gt; TODAY(),
        (DATE (YEAR(TODAY()),1,1)) + 59,
        (DATE (YEAR(TODAY())+1,1,1)) + 59
    ),
    IF (
        DATE (YEAR(TODAY()),MONTH(Birthdate__c),DAY(Birthdate__c)) &gt; TODAY(),
        DATE (YEAR(TODAY()),MONTH(Birthdate__c),DAY(Birthdate__c)),
        DATE (YEAR(TODAY())+1,MONTH(Birthdate__c),DAY(Birthdate__c))
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNQ_Date__c</fullName>
        <description>It is used to capture the DNQ date</description>
        <label>DNQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Liability_Release_Authorization__c</fullName>
        <description>It is used to capture the liability release and authorisation date</description>
        <label>Date - Liability Release &amp; Authorization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Absent_Parent_Form__c</fullName>
        <description>It is used to capture the Absent parent form submitted date</description>
        <label>Date - Absent Parent Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Child_s_Medical_Summar__c</fullName>
        <description>It is used to capture the child’s medical summary form submitted date</description>
        <label>Date - Child’s Medical Summary Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Communication_Profile__c</fullName>
        <description>It is used to capture the Communication profile submitted date</description>
        <label>Date - Communication Profile</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Entertainment_Sports__c</fullName>
        <description>It is used to capture the entertainment and sports date</description>
        <label>Date - Entertainment &amp; Sports</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Guardianship_Document__c</fullName>
        <description>It is used to capture the Guardianship document submitted date</description>
        <label>Date - Guardianship Document</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Passports__c</fullName>
        <description>It is used to capture the passports date</description>
        <label>Date - Passports</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Single_Parent_Form__c</fullName>
        <description>It is used to capture the single parent form submitted date</description>
        <label>Date - Single Parent Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Visas__c</fullName>
        <description>It is used to capture the visa received date</description>
        <label>Date  - Visas</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received_for_Wish_Safety_Authorizat__c</fullName>
        <description>It is used to capture the date of safety auth wish clearance form submitted date</description>
        <label>Date - Safety Auth Wish Clearance Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Wish_Child_Form__c</fullName>
        <description>Received Date of Wish Child Form</description>
        <label>Date - Wish Child Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Wish_Family_Form__c</fullName>
        <description>Received date of Wish Family Form</description>
        <label>Date - Wish Family Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Wish_Information_Form__c</fullName>
        <description>Received Date of Wish Information Form</description>
        <label>Date - Wish Information Form</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_last_visit_treatment__c</fullName>
        <description>It is used to capture the recent treatment date of wish child</description>
        <label>Date of Last Visit/Treatment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Stage__c</fullName>
        <description>It is used to capture the days in stage</description>
        <formula>Today() -  Status_Date__c</formula>
        <label>Days In Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details_about_Impact__c</fullName>
        <description>Is there anything on your family’s calendar (upcoming medical treatments, school or work commitments,
planned vacations, etc.) that might impact your ability to participate in a wish?</description>
        <label>Details about Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Staff_Email__c</fullName>
        <description>This field will capture the dev staff email</description>
        <label>Dev Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Verification_Receive_Date__c</fullName>
        <description>It is used to capture the received date of dv</description>
        <inlineHelpText>Date the Diagosis Verification is received from the child&apos;s medical professional</inlineHelpText>
        <label>Diagnosis Verification Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Verification_Sent_Date__c</fullName>
        <description>It is used to capture the dv sent date</description>
        <inlineHelpText>Date the Diagosis Verification is sent to child&apos;s medical professional</inlineHelpText>
        <label>Diagnosis Verification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Does_participant_have_valid_photo_ID__c</fullName>
        <description>It  captures the valid photo id issued by the U.S. federal or state</description>
        <label>Over 18 Have Valid ID?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_your_family_have_a_credit_card_Note__c</fullName>
        <description>It captures the valid credit card information and its expiration date</description>
        <label>Credit Card Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_your_family_have_a_credit_card__c</fullName>
        <description>It  captures  whether your family have a credit card or not information</description>
        <label>Family Have Credit Card?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_Information__c</fullName>
        <description>This field is used to display the driver information when the WPP is approved.</description>
        <label>Driver Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Driver_Names__c</fullName>
        <description>It wil hold the details about Participant Driver names</description>
        <label>Driver Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Number__c</fullName>
        <description>It is used to capture the emergency number</description>
        <label>Emergency Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field will capture end date</description>
        <inlineHelpText>Confirmed date when the wish is completed (arrive home) or revealed</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entertainment_Sports_Wish_LOU__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to capture the entertainment &amp; sprots wish LOU</description>
        <label>Entertainment &amp; Sports Wish LOU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <description>It store the docusign envelop Id.</description>
        <label>Hidden Envelop Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_End_Date__c</fullName>
        <description>It capture the Extended End Date</description>
        <inlineHelpText>Date the family returns home (on their own) after the completion of the wish</inlineHelpText>
        <label>Extended End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Start_Date__c</fullName>
        <description>It Capture the Extended Start Date</description>
        <inlineHelpText>Date the family leaves early prior to the beginning of the wish</inlineHelpText>
        <label>Extended Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fill_wish_participant_name_medical_needs__c</fullName>
        <description>It describes the information about wish participant and medical needs</description>
        <inlineHelpText>Any additional requests are at the discretion of the chapter office. If medical supplies are requested, please detail the relevant model number, manufacturer, size, dimensions, and any other pertinent information if needed during travel.</inlineHelpText>
        <label>Additional Medical Requests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form_Tracking_Notes__c</fullName>
        <description>It used to capture the form tracking details</description>
        <label>Form Tracking Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Id__c</fullName>
        <description>This field is used to capture the fund id</description>
        <externalId>true</externalId>
        <label>Fund Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GKTW_Confirmation_Date__c</fullName>
        <description>It is used to capture the confirmation date of GKTW</description>
        <inlineHelpText>Date that GKTW confirms the reservation dates (on confirmation form)</inlineHelpText>
        <label>GKTW Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guardianship_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is used to identify the Guardianship document available or not</description>
        <label>Guardianship Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handicap_accommodations_be_required_Note__c</fullName>
        <description>it holds the handicap accommodations details</description>
        <label>Accommodation Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Handicap_accommodations_be_required__c</fullName>
        <description>It captures the handicap accommodations information</description>
        <label>Handicap Accommodations Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_your_family_flown_before_Note__c</fullName>
        <description>It capture the  detailed information about family flown</description>
        <label>Flown Before Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_family_flown_before__c</fullName>
        <description>It captures the  information about  family  has already flown or not</description>
        <label>Family Flown Before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_current_automobile_insurance__c</fullName>
        <description>It is used to  get the details about automobile insurance</description>
        <inlineHelpText>Do you have current automobile insurance?</inlineHelpText>
        <label>Have Current Automobile Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HiddenAnticipatedDate__c</fullName>
        <description>This field is used for docusign purpose.</description>
        <formula>text(MONTH(Anticipated_Start_Date__c)) +&apos;/&apos;+ text(DAY(Anticipated_Start_Date__c)) +&apos;/&apos;+ text(YEAR(Anticipated_Start_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Anticipated Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_All_Primary__c</fullName>
        <description>It is used as hidden field for background process</description>
        <label>Hidden All Primary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Email__c</fullName>
        <description>This field is used to store the chapter email.</description>
        <formula>IF(  RecordType.Name = &apos;Wish&apos;, ChapterName__r.Email__c,  Parent.ChapterName__r.Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Name__c</fullName>
        <description>This Hidden field is used to store the Chapter Name value.</description>
        <formula>IF(  RecordType.Name = &apos;Wish&apos;, ChapterName__r.Name,  Parent.ChapterName__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Chapter_Phone__c</fullName>
        <description>This field is used to store the chapter phone value</description>
        <formula>IF(  RecordType.Name = &apos;Wish&apos;, ChapterName__r.Phone,  Parent.ChapterName__r.Phone )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Chapter Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Close_Sub_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will allow non-admin user to close sub case via code.</description>
        <label>Hidden Close Sub Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Contact_County__c</fullName>
        <description>County - from Wish child contact information</description>
        <label>Hidden Contact County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Contact_Gender__c</fullName>
        <description>It used to capture the contact gender as hidden value</description>
        <label>Hidden Contact Gender</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Diagn_Verifi_Received_Date__c</fullName>
        <description>It is used to capture DV received date as hidden value for background process</description>
        <formula>Lead__r.Part_A_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Diagn Verifi Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Email_List__c</fullName>
        <description>This field is used to store the list of email values from Wish Information form.</description>
        <label>Hidden Email List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Hold_Status_Value__c</fullName>
        <description>This field is used to store the previous value when the status is Inactive or Hold.</description>
        <label>Hidden Hold Status Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Lead_Id__c</fullName>
        <description>It is used to hold the lead id as hidden value</description>
        <label>Lead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Lead_Name__c</fullName>
        <description>This field is used to store the Lead Name</description>
        <formula>Lead__r.FirstName+ &apos; &apos;+ &apos; &apos;+Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Name_List__c</fullName>
        <description>This field is used to store the parent guardian and participant values.</description>
        <label>Hidden Name List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Primary_Diagnosis__c</fullName>
        <description>It is a hidden field used to hold the primary diagnosis value from the lead during conversion</description>
        <label>Hidden Primary Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Primary_Diagnosis_del__c</fullName>
        <description>It is used to capture the primary diagnosis as hidden value</description>
        <formula>Lead__r.PD_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Primary Diagnosis.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Publicity_Notes__c</fullName>
        <description>hold the value from contact and used to show in case file</description>
        <label>Hidden Publicity Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Publicity_OK__c</fullName>
        <description>holds Publicity OK from contact and used to show in case file</description>
        <label>Hidden Publicity OK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Referral_date__c</fullName>
        <description>It is used to capture referral date as hidden value for background process</description>
        <formula>Lead__r.Referred_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Referral date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_1__c</fullName>
        <description>This field is used to store the SD2 Condition Description Value.</description>
        <formula>Lead__r.SD2_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_2__c</fullName>
        <description>This field is used to store the SD2 Condition Description Value.</description>
        <formula>Lead__r.SD3_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis_3__c</fullName>
        <description>This field is used to store the SD3 Condition Description Value.</description>
        <formula>Lead__r.SD4_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Secondary_Diagnosis__c</fullName>
        <description>This field is used to store the SD2 Condition Description Value</description>
        <formula>Lead__r.SD1_Condition_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Secondary Diagnosis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_VOinactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hidden VOinactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hidden_Why_do_you_feel__c</fullName>
        <description>Used to hold why do you feel value from wish child record</description>
        <label>Hidden Why do you feel</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_City__c</fullName>
        <description>This field is used to store the wish child city information. its created to send an email purpose.</description>
        <formula>Contact.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Country_Code__c</fullName>
        <description>This field is used to store the wish child country code information. its created to send an email purpose.</description>
        <formula>TEXT(Contact.MailingCountryCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Full_Name__c</fullName>
        <description>This Hidden field is created for send an email when when the case sub status is &quot;Abandoned&quot;.</description>
        <formula>IF( RecordType.Name=&apos;Wish&apos;, Contact.FirstName + &apos; &apos; +  Contact.LastName , Parent.Contact.FirstName + &apos; &apos; +  Parent.Contact.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Postalcode__c</fullName>
        <description>This field is used to store the wish child postal code information. its created to send an email purpose.</description>
        <formula>Contact.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Postalcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_StateCode__c</fullName>
        <description>This field is used to store the wish child state information. its created to send an email purpose.</description>
        <formula>TEXT(Contact.MailingStateCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child StateCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Street__c</fullName>
        <description>This field is used to store the wish child street information. and its created for email purpose.</description>
        <formula>Contact.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Owner_Email__c</fullName>
        <description>This field is used to store the value of wish owner manager email.</description>
        <label>Hidden Wish Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Owner_Manager__c</fullName>
        <description>This field is hold the value of wish owner manager name.</description>
        <label>Hidden Wish Owner Manager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Presentation_Not_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify whether the wish presentation date is entered or not</description>
        <label>Hidden Wish Presentation Not Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Date__c</fullName>
        <description>It is used to capture the hold date</description>
        <inlineHelpText>Date the wish is put on hold for medical or elective reasons</inlineHelpText>
        <label>Hold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <description>Import id</description>
        <label>Import Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InActiveWishGranter__c</fullName>
        <description>It is used to capture the inactivewishgranter</description>
        <label>Hidden InActiveWishGranter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <description>It is used to capture the wish inactive date</description>
        <inlineHelpText>Date the wish is determined inactive and closing procedures begin</inlineHelpText>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Date__c</fullName>
        <description>It holds the Date of Inquiry form submitted.</description>
        <inlineHelpText>Date the Initial lead from a non-authorized referral source is received</inlineHelpText>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interested_in_Future_events__c</fullName>
        <description>It find out  if the wish child/family is interested to participate for the events.</description>
        <label>Interested In Future Events</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interview_Date_Not_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to check interview date set or not</description>
        <label>Hidden Interview Date Not Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_date__c</fullName>
        <description>This field will capture the interview date</description>
        <inlineHelpText>Date the volunteers met with the wish child and family</inlineHelpText>
        <label>Interview Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to lock the record when the sub status is &quot;Abandoned&quot;.</description>
        <label>Hidden IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRushChildSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to send rush alert to child medical summary template when the Rush is checked in parent cas</description>
        <label>IsRushChildSummary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRushWishClearence_ChildSummary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to send rush wish clearence and child medical summary template when the Rush is checked in parent case.</description>
        <label>IsRushWishClearence&amp;ChildSummary Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_wheelchair_accessible_vehicle_neede__c</fullName>
        <description>It  display the details about  wheelchair accessible vehicle needed or not</description>
        <label>Wheelchair Accessible Vehicle Needed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_the_wheelchair_collapsible_Note__c</fullName>
        <description>it describes the  detail information about the  wheelchair collapsible</description>
        <label>Wheelchair Collapsible Note</label>
        <type>TextArea</type>
    </fields>
</CustomObject>